[INTERNAL] DragAndDrop: Ensure highest z-index for drop indicator
Make sure the drop indicator is always rendered above other elements during drag-and-drop.

SNOW: DINC0601905

--- a/src/sap.ui.core/src/sap/ui/core/themes/base/DragAndDrop.less
+++ b/src/sap.ui.core/src/sap/ui/core/themes/base/DragAndDrop.less
@@ -20,7 +20,6 @@
 .sapUiDnDIndicator {
 	position: absolute;
 	pointer-events: none;
-	z-index: 99;
 
 	&[data-drop-position='Between'] {
 		background: var(--sapContent_DragAndDropActiveColor);
